

export enum Appearance {
    COUNTDOWN = "countdown",
    COUNTUP = "countup"
}


export enum StartTimeType {
    MANUAL = "manual",
    SCHEDULED = "scheduled"
}